--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,6 +10,7 @@
     <h:body>
        <center>
         <h1><h:link class="btnp" value="Vista Sucursal" outcome="/paginas/Sucursal.jsf"/><p/></h1>
+        <h1><h:link class="btnp" value="Vista CaracteristicaAsiento" outcome="/paginas/CaracteristicaAsiento.jsf"/><p/></h1>
        </center>
     </h:body>
 </html>
