--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,16 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html   xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:p="http://primefaces.org/ui"
-        xmlns:rs="http://xmlns.jcp.org/jsf/composite/components">
-    <h:head>
-        <title>Inicio</title>
-    </h:head>
-    <h:body>
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets" 
+                template="/resources/template/pagesTemplate.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:rs="http://xmlns.jcp.org/jsf/composite/components">                
+    <ui:define name="title">Pelicula</ui:define>
+    <ui:define name="content">
        <center>
         <h1><h:link class="btnp" value="Vista Sucursal" outcome="/paginas/Sucursal.jsf"/><p/></h1>
         <h1><h:link class="btnp" value="Vista CaracteristicaAsiento" outcome="/paginas/CaracteristicaAsiento.jsf"/><p/></h1>
        </center>
-    </h:body>
-</html>
+    </ui:define>
+</ui:composition>    
+
