--- a/src/main/webapp/paginas/CaracteristicaAsiento.xhtml
+++ b/src/main/webapp/paginas/CaracteristicaAsiento.xhtml
@@ -1,13 +1,12 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html   xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:p="http://primefaces.org/ui"
-        xmlns:rs="http://xmlns.jcp.org/jsf/composite/components">
-    <h:head>
-        <title>Carac.Asientos</title>
-    </h:head>
-    <h:body>   
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets" 
+                template="/resources/template/pagesTemplate.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:rs="http://xmlns.jcp.org/jsf/composite/components">                
+    <ui:define name="title">Pelicula</ui:define>
+    <ui:define name="content">
         <h1 align="center">Caracteristicas Asientos</h1>
         <h:form id="Datos">
             
@@ -44,5 +43,5 @@
                 
             </h:form>
         </p:dialog>
-    </h:body>
-</html>
+    </ui:define>
+</ui:composition>
