--- a/src/main/webapp/paginas/Sucursal.xhtml
+++ b/src/main/webapp/paginas/Sucursal.xhtml
@@ -28,17 +28,17 @@
                     <p:column headerText="Activo">
                         <h:outputText value="#{s.activo?'Activo':'Inactivo'}"/>
                     </p:column>
-                    <p:ajax event="rowSelect" listener="#{sucursalBean.onRowSelect}" update=":da Datos" oncomplete="PF('crud').show()"/>
+                    <p:ajax event="rowSelect" listener="#{sucursalBean.onRowSelect}" update=":da Datos"/>
                     <p:ajax event="rowUnselect" listener="#{sucursalBean.onRowDeselect}" update=":da"/>
                 </p:dataTable>
-                <p:commandButton value="Nuevo" oncomplete="PF('crud').show()" update="Datos :da" actionListener="#{sucursalBean.btnNuevoHandler}"/>
+                <p:commandButton value="Nuevo" update="Datos :da" actionListener="#{sucursalBean.btnNuevoHandler}"/>
             </h:panelGrid>
         </h:form>
 
-        <p:dialog widgetVar="crud" modal="false" resizable="false" header="CRUD sucursales">
+        <!--p:dialog widgetVar="crud" modal="false" resizable="false" header="CRUD sucursales"-->
             <h:form id="da">
 
-                <p:panelGrid columns="2">
+                <p:panelGrid columns="2" rendered="#{sucursalBean.acciones!='NONE'}">
                     <p:outputLabel value="ID" for="txtId"/>
                     <p:inputNumber id="txtId" value="#{sucursalBean.registro.idSucursal}" disabled="false" decimalPlaces="0" required="true"/>
                     <p:outputLabel value="Nombre" for="txtNombre"/>
@@ -53,6 +53,6 @@
                 <rs:AbstractButtons backingBean="#{sucursalBean}" idbackingBean="#{sucursalBean.registro.idSucursal}"/>
 
             </h:form>
-        </p:dialog>
+        <!--/p:dialog-->
     </ui:define>
 </ui:composition>
