--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,6 +11,7 @@
         <h1><h:link class="btnp" value="Vista Sucursal" outcome="/paginas/Sucursal.jsf"/><p/></h1>
         <h1><h:link class="btnp" value="Vista CaracteristicaAsiento" outcome="/paginas/CaracteristicaAsiento.jsf"/><p/></h1>
         <h1><h:link class="btnp" value="Vista asiento" outcome="/paginas/Asientos.jsf"/><p/></h1>
+        <h1><h:link class="btnp" value="Vista asientop" outcome="/paginas/AsientosPrueba.jsf"/><p/></h1>
 
        </center>
     </ui:define>
