--- a/src/main/webapp/paginas/Sucursal.xhtml
+++ b/src/main/webapp/paginas/Sucursal.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
         <h1 align="center"> Sucursales</h1>
         <h:form id="Datos">
-            <h:panelGrid id="tabla" rendered="#{sucursalBean.acciones=='NONE'}">                
+            <h:panelGrid id="tabla" rendered="#{sucursalBean.acciones=='NADA'}">                
                 <p:dataTable var="s" value="#{sucursalBean.modelo}" paginator="true" rows="5" paginatorPosition="bottom" 
                              selectionMode="single" id="Genero" lazy="true" selection="#{sucursalBean.registro}" 
                              rendered="#{not empty sucursalBean.modelo}">>
@@ -38,7 +38,7 @@
         <!--p:dialog widgetVar="crud" modal="false" resizable="false" header="CRUD sucursales"-->
             <h:form id="da">
 
-                <p:panelGrid columns="2" rendered="#{sucursalBean.acciones!='NONE'}">
+                <p:panelGrid columns="2" rendered="#{sucursalBean.acciones!='NADA'}">
                     <p:outputLabel value="ID" for="txtId"/>
                     <p:inputNumber id="txtId" value="#{sucursalBean.registro.idSucursal}" disabled="false" decimalPlaces="0" required="true"/>
                     <p:outputLabel value="Nombre" for="txtNombre"/>
@@ -50,7 +50,7 @@
                     <p:outputLabel value="Activo" for="chActivo"/>
                     <p:selectBooleanCheckbox id="chActivo" value="#{sucursalBean.registro.activo}"/>
                 </p:panelGrid>
-                <p:panelGrid columns="2" rendered="#{sucursalBean.acciones!='NONE'}">
+                <p:panelGrid columns="2" rendered="#{sucursalBean.acciones!='NADA'}">
                 <rs:AbstractButtons backingBean="#{sucursalBean}"/>
                 </p:panelGrid>
             </h:form>
