--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,8 +10,9 @@
        <center>
         <h1><h:link class="btnp" value="Vista Sucursal" outcome="/paginas/Sucursal.jsf"/><p/></h1>
         <h1><h:link class="btnp" value="Vista CaracteristicaAsiento" outcome="/paginas/CaracteristicaAsiento.jsf"/><p/></h1>
-        <h1><h:link class="btnp" value="Vista asiento" outcome="/paginas/Asientos.jsf"/><p/></h1>
-        
+        <h1><h:link class="btnp" value="Vista Asiento" outcome="/paginas/Asientos.jsf"/><p/></h1>
+        <h1><h:link class="btnp" value="Vista Sala" outcome="/paginas/Sala.jsf"/><p/></h1>
+
        </center>
     </ui:define>
 </ui:composition>    
